[gd_scene load_steps=12 format=3 uid="uid://ca1qwxe2wemin"]

[ext_resource type="Script" uid="uid://bc4pu2rtu8n1w" path="res://scripts/terminal.gd" id="1_m430i"]
[ext_resource type="FontFile" uid="uid://cbi6qc2w2chwv" path="res://assets/fonts/Pixellari.ttf" id="2_sy66w"]
[ext_resource type="AudioStream" uid="uid://655nyyt74vom" path="res://assets/sfx/talk/sig.wav" id="3_vs6ym"]
[ext_resource type="AudioStream" uid="uid://d0amonk26pq58" path="res://assets/sfx/talk/computer.wav" id="4_dhnb1"]
[ext_resource type="AudioStream" uid="uid://crf2g8ad7sf20" path="res://assets/sfx/talk/signal.wav" id="5_4vtf0"]
[ext_resource type="AudioStream" uid="uid://dsg1o642u2taq" path="res://assets/sfx/talk/invalid_input.wav" id="6_2u1pf"]
[ext_resource type="AudioStream" uid="uid://bned1vswcsy3n" path="res://assets/sfx/talk/valid_input.wav" id="7_g6hjw"]
[ext_resource type="AudioStream" uid="uid://dgqyq16q0oe7k" path="res://assets/sfx/talk/type.wav" id="8_g6hjw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sy66w"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vs6ym"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="FontVariation" id="FontVariation_sy66w"]
base_font = ExtResource("2_sy66w")
variation_embolden = 0.5
spacing_glyph = 2

[node name="Terminal" type="Node2D"]
script = ExtResource("1_m430i")

[node name="Arrow" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 33.0
offset_top = 1018.0
offset_right = 65.0
offset_bottom = 1065.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_sy66w")
theme_override_font_sizes/font_size = 46
text = ">"
vertical_alignment = 2

[node name="PlayerInput" type="LineEdit" parent="."]
unique_name_in_owner = true
offset_left = 73.0
offset_top = 1012.0
offset_right = 1882.0
offset_bottom = 1070.0
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 0)
theme_override_colors/clear_button_color = Color(0, 0, 0, 0)
theme_override_colors/selection_color = Color(0, 0, 0, 0)
theme_override_colors/caret_color = Color(0, 1, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/font_selected_color = Color(0, 0, 0, 0)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_sy66w")
theme_override_font_sizes/font_size = 49
theme_override_styles/focus = SubResource("StyleBoxFlat_sy66w")
theme_override_styles/normal = SubResource("StyleBoxFlat_vs6ym")
text = "dwd"
max_length = 50
keep_editing_on_text_submit = true
context_menu_enabled = false
emoji_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
caret_blink = true
caret_force_displayed = true

[node name="Text" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = 33.0
offset_top = -25776.0
offset_right = 1896.0
offset_bottom = 995.0
theme_override_fonts/normal_font = ExtResource("2_sy66w")
theme_override_fonts/bold_font = SubResource("FontVariation_sy66w")
theme_override_font_sizes/bold_italics_font_size = 35
theme_override_font_sizes/italics_font_size = 35
theme_override_font_sizes/normal_font_size = 35
theme_override_font_sizes/bold_font_size = 35
bbcode_enabled = true
text = "Type \"boot\" to start SIG, the station's AI supervisor. Input RIGHT_CLICK to exit the terminal.
"
vertical_alignment = 2

[node name="TypingTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="MemoryTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0
autostart = true

[node name="SFX" type="Node" parent="."]

[node name="Sig" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("3_vs6ym")
volume_db = -35.0

[node name="Computer" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("4_dhnb1")
volume_db = -20.0

[node name="Signal" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("5_4vtf0")
volume_db = -25.0

[node name="InvalidInput" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("6_2u1pf")
volume_db = -20.0

[node name="ValidInput" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("7_g6hjw")
volume_db = -25.0

[node name="Type" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("8_g6hjw")
volume_db = -20.0

[connection signal="text_changed" from="PlayerInput" to="." method="_on_player_input_text_changed"]
[connection signal="text_submitted" from="PlayerInput" to="." method="_on_player_input_text_submitted"]
[connection signal="timeout" from="MemoryTimer" to="." method="_on_memory_timer_timeout"]
